Adjust layout to avoid horizontal scrollbar on Firefox

--- a/common/common.scss
+++ b/common/common.scss
@@ -37,12 +37,10 @@ html:not(.discourse-gifs-with-img)
   .gif-content {
     height: calc(100% - 50px);
     overflow-y: auto;
-    margin-top: 1em;
-  }
-  .gif-box {
     min-width: 320px;
     max-height: 350px;
-
+  }
+  .gif-box {
     .gif-result-list {
       padding-top: 1em;
       display: grid;
@@ -51,7 +49,7 @@ html:not(.discourse-gifs-with-img)
       // grid-template-rows: masonry;
       grid-gap: 0.6em;
       grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-      grid-auto-rows: 20px;
+      grid-auto-rows: 25px;
       .gif-imgwrap {
         grid-row-end: span 3;
         overflow: hidden;
@@ -75,22 +73,22 @@ html:not(.discourse-gifs-with-img)
       display: block;
       height: 10px;
     }
-
-    .gif-no-results {
-      padding-top: 1em;
-      width: 100%;
-      height: 210px;
-      box-sizing: border-box;
-      padding: 2em;
-      background: var(--primary-very-low);
-      font-size: var(--font-up-1);
-      color: var(--primary-medium);
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      text-align: center;
-    }
   }
+
+  .gif-no-results {
+    width: 100%;
+    height: 210px;
+    box-sizing: border-box;
+    padding: 2em;
+    background: var(--primary-very-low);
+    font-size: var(--font-up-1);
+    color: var(--primary-medium);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+
   .modal-footer {
     display: flex;
     flex-flow: row-reverse;
